Closed
Bug 614829
Opened 15 years ago
Closed 15 years ago
menupopup end event isn't fired for ARIA menus
Categories
(Core :: Disability Access APIs, defect)
Core
Disability Access APIs
Tracking
()
RESOLVED
FIXED
mozilla2.0b8
| Tracking | Status | |
|---|---|---|
| blocking2.0 | --- | final+ |
People
(Reporter: surkov, Assigned: surkov)
References
()
Details
(Keywords: access, regression)
Attachments
(1 file, 2 obsolete files)
|
5.70 KB,
patch
|
fherrera
:
review+
MarcoZ
:
review+
|
Details | Diff | Splinter Review |
No description provided.
| Assignee | ||
Updated•15 years ago
|
blocking2.0: --- → ?
| Assignee | ||
Comment 1•15 years ago
|
||
we regressed in bug 570275, the code was just removed
| Assignee | ||
Comment 2•15 years ago
|
||
Attachment #493339 -
Flags: review?(marco.zehe)
Attachment #493339 -
Flags: review?(fherrera)
| Assignee | ||
Comment 3•15 years ago
|
||
correct patch
Attachment #493339 -
Attachment is obsolete: true
Attachment #493340 -
Flags: review?(marco.zehe)
Attachment #493340 -
Flags: review?(fherrera)
Attachment #493339 -
Flags: review?(marco.zehe)
Attachment #493339 -
Flags: review?(fherrera)
| Assignee | ||
Comment 4•15 years ago
|
||
try-server build will be available here - http://ftp.mozilla.org/pub/mozilla.org/firefox/tryserver-builds/surkov.alexander@gmail.com-f1dc66fb9caf
| Assignee | ||
Comment 5•15 years ago
|
||
make menupopup end logic consistent to menupoup start, i.e. process it for ARIA menus only.
Attachment #493340 -
Attachment is obsolete: true
Attachment #493341 -
Flags: review?(marco.zehe)
Attachment #493341 -
Flags: review?(fherrera)
Attachment #493340 -
Flags: review?(marco.zehe)
Attachment #493340 -
Flags: review?(fherrera)
Comment 6•15 years ago
|
||
Comment on attachment 493341 [details] [diff] [review]
patch3
r=me, thanks, very nice change!
Attachment #493341 -
Flags: review?(marco.zehe) → review+
Comment 7•15 years ago
|
||
Comment on attachment 493341 [details] [diff] [review]
patch3
r=me, thanks!
Attachment #493341 -
Flags: review?(fherrera) → review+
| Assignee | ||
Comment 9•15 years ago
|
||
landed on 2.0 - http://hg.mozilla.org/mozilla-central/rev/71705aa67f3e
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Target Milestone: --- → mozilla2.0b8
You need to log in
before you can comment on or make changes to this bug.
Description
•