Bug 614829 - menupopup end event isn't fired for ARIA menus, r=fer, marcoz, a=blocking2.0final+